--- a/index.html
+++ b/index.html
@@ -5,116 +5,360 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ronel Abraham Mathew - Portfolio</title>
   <style>
+    /* Global Styles */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f4faff;
-      color: #333;
+      background-color: #0d1b2a;
+      color: #e0e1dd;
+      line-height: 1.6;
     }
+
     header {
-      background: #007bff;
-      color: white;
       text-align: center;
-      padding: 20px;
+      padding: 2rem 1rem;
+      background: #1b263b;
+      color: #fff;
     }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+
     nav {
-      background: #0056b3;
-      text-align: center;
-      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      background: #1b263b;
+      padding: 0.5rem;
     }
+
     nav a {
-      color: white;
+      color: #00b4d8;
       text-decoration: none;
-      margin: 0 15px;
+      font-weight: bold;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
+
     section {
-      padding: 40px 20px;
-      max-width: 900px;
+      padding: 2rem;
+      max-width: 1200px;
       margin: auto;
     }
+
     h2 {
-      color: #0056b3;
-      text-align: center;
+      border-bottom: 2px solid #00b4d8;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
     }
+
+    /* Certification Layout */
+    .cert-group {
+      margin-bottom: 2rem;
+    }
+
+    .cert-group h3 {
+      color: #90e0ef;
+      margin-bottom: 1rem;
+    }
+
+    .cert-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+    }
+
     .card {
-      border: 1px solid #cce0ff;
-      padding: 15px;
-      margin: 15px 0;
-      border-radius: 5px;
-      background: white;
+      background: #1b263b;
+      border-radius: 10px;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 1rem;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
     }
+
+    .card-info {
+      flex: 2;
+    }
+
+    .card-info h4 {
+      margin: 0;
+      color: #00b4d8;
+    }
+
+    .card-info p {
+      margin: 5px 0;
+    }
+
+    .card-info a {
+      color: #90e0ef;
+      text-decoration: none;
+      font-size: 0.9rem;
+    }
+
+    .card-info a:hover {
+      text-decoration: underline;
+    }
+
+    .card img {
+      max-width: 120px;
+      border-radius: 8px;
+      flex-shrink: 0;
+      cursor: pointer; /* Indicates the image is clickable */
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .card img:hover {
+        transform: scale(1.05); /* Slight zoom on hover */
+    }
+
     footer {
-      background: #007bff;
-      color: white;
       text-align: center;
-      padding: 15px;
-      margin-top: 20px;
+      padding: 1rem;
+      background: #1b263b;
+      margin-top: 2rem;
+      color: #778da9;
     }
+
+    /* --MODAL STYLES START-- */
+
+    /* The Modal (background) */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1000; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    /* Modal Content (the image) */
+    .modal-content {
+      margin: auto;
+      display: block;
+      width: 80%;
+      max-width: 800px; /* Max width */
+      border-radius: 10px;
+      /* Add animation */
+      animation-name: zoom;
+      animation-duration: 0.4s;
+    }
+
+    /* Animation */
+    @keyframes zoom {
+      from {transform: scale(0.5); opacity: 0;}
+      to {transform: scale(1); opacity: 1;}
+    }
+
+    /* The Close Button */
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      color: #f1f1f1;
+      font-size: 40px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #bbb;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    /* --MODAL STYLES END-- */
   </style>
 </head>
 <body>
 
   <header>
     <h1>Ronel Abraham Mathew</h1>
-    <p>CSE Student | Developer | Footballer | Pianist</p>
+    <p>First-Year B.Tech CSE at Karunya University | Aspiring Software Engineer | Web Development & AI Enthusiast</p>
   </header>
 
   <nav>
-    <a href="#about">About</a>
     <a href="#projects">Projects</a>
     <a href="#certifications">Certifications</a>
-    <a href="#skills">Skills</a>
-    <a href="#contact">Contact</a>
   </nav>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hello! I'm <b>Ronel Abraham Mathew</b>, a Computer Science and Engineering student at Karunya Institute of Technology and Sciences. I love working on projects, learning new tech, and exploring creativity through coding, football, and music.</p>
-  </section>
 
   <section id="projects">
     <h2>Projects</h2>
-    <div class="card">
-      <h3>Project 1</h3>
-      <p>Short description of the project. <a href="#">GitHub Link</a></p>
-    </div>
-    <div class="card">
-      <h3>Project 2</h3>
-      <p>Short description of the project. <a href="#">Demo Link</a></p>
-    </div>
+    <p>Coming Soon....</p>
   </section>
 
   <section id="certifications">
     <h2>Certifications</h2>
-    <div class="card">
-      <h3>Certification 1</h3>
-      <p>Issued by XYZ Platform. <a href="#">View</a></p>
-    </div>
-    <div class="card">
-      <h3>Certification 2</h3>
-      <p>Issued by ABC Platform. <a href="#">View</a></p>
-    </div>
-  </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <p style="text-align:center;">C, C++, Python, HTML, CSS, JavaScript, Git, Linux</p>
-  </section>
+    <!-- Oracle -->
+    <div class="cert-group">
+      <h3>Oracle</h3>
+      <div class="cert-cards">
+        <div class="card">
+          <div class="card-info">
+            <h4>Oracle Cloud Infrastructure 2025 Certified AI Foundations Associate</h4>
+            <p><strong>Issuer:</strong> Oracle</p>
+            <p><strong>Date:</strong> 26 Aug 2025</p>
+            <a href="https://catalog-education.oracle.com/ords/certview/sharebadge?id=FA63D378E204D24935C10F78C5E82CAA40CF468F1BA324717F22C4EDF9D8B74E" target="_blank">View Credential</a>
+          </div>
+          <img class="cert-image" src="certs/oracle.jpg" alt="Oracle AI Foundations">
+        </div>
+      </div>
+    </div>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:ronel@example.com">ronel@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/ronel">github.com/ronel</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/ronel">linkedin.com/in/ronel</a></p>
+    <!-- OpenCV -->
+    <div class="cert-group">
+      <h3>OpenCV Learn Roadmap</h3>
+      <div class="cert-cards">
+        <div class="card">
+          <div class="card-info">
+            <h4>OpenCV Bootcamp</h4>
+            <p><strong>Issuer:</strong> OpenCV</p>
+            <p><strong>Date:</strong> 31 Aug 2025</p>
+            <a href="https://courses.opencv.org/certificates/4a030babcfc444da991328c2ec2fd79e?latest62" target="_blank">View Credential</a>
+          </div>
+          <img class="cert-image" src="certs/opencv-bootcamp.jpg" alt="OpenCV Bootcamp">
+        </div>
+        <div class="card">
+          <div class="card-info">
+            <h4>Python for Beginners</h4>
+            <p><strong>Issuer:</strong> OpenCV</p>
+            <p><strong>Date:</strong> 31 Aug 2025</p>
+            <a href="https://courses.opencv.org/certificates/6a4ca18eb2bb4d6da41f471a9bc8b27b?latest93" target="_blank">View Credential</a>
+          </div>
+          <img class="cert-image" src="certs/opencv-python.jpg" alt="OpenCV Python">
+        </div>
+      </div>
+    </div>
+
+    <!-- University of Helsinki -->
+    <div class="cert-group">
+        <h3>University of Helsinki</h3>
+        <div class="cert-cards">
+            <div class="card">
+                <div class="card-info">
+                    <h4>Introduction to Artificial Intelligence</h4>
+                    <p><strong>Issuer:</strong> University of Helsinki</p>
+                    <p><strong>Date:</strong> 27 Aug 2025</p>
+                    <a href="https://certificates.mooc.fi/validate/pz5k5epwti" target="_blank">View Credential</a>
+                </div>
+                <img class="cert-image" src="certs/helsinki-ai.png" alt="AI by Helsinki">
+            </div>
+        </div>
+    </div>
+
+    <!-- Kaggle -->
+    <div class="cert-group">
+      <h3>Kaggle Learn Roadmap</h3>
+      <div class="cert-cards">
+        <div class="card">
+          <div class="card-info">
+            <h4>Python</h4>
+            <p><strong>Issuer:</strong> Kaggle</p>
+            <p><strong>Date:</strong> 27 Aug 2025</p>
+            <a href="https://www.kaggle.com/learn/certification/ronelm/python" target="_blank">View Credential</a>
+          </div>
+          <img class="cert-image" src="certs/kaggle-python.png" alt="Kaggle Python">
+        </div>
+        <div class="card">
+          <div class="card-info">
+            <h4>Intro to Machine Learning</h4>
+            <p><strong>Issuer:</strong> Kaggle</p>
+            <p><strong>Date:</strong> 27 Aug 2025</p>
+            <a href="https://www.kaggle.com/learn/certification/ronelm/intro-to-machine-learning" target="_blank">View Credential</a>
+          </div>
+          <img class="cert-image" src="certs/kaggle-ml.png" alt="Kaggle ML">
+        </div>
+        <div class="card">
+          <div class="card-info">
+            <h4>Intro to Programming</h4>
+            <p><strong>Issuer:</strong> Kaggle</p>
+            <p><strong>Date:</strong> 27 Aug 2025</p>
+            <a href="https://www.kaggle.com/learn/certification/ronelm/intro-to-programming" target="_blank">View Credential</a>
+          </div>
+          <img class="cert-image" src="certs/kaggle-programming.png" alt="Kaggle Programming">
+        </div>
+      </div>
+    </div>
+
+    <!-- LinkedIn -->
+    <div class="cert-group">
+        <h3>LinkedIn</h3>
+        <div class="cert-cards">
+            <div class="card">
+                <div class="card-info">
+                    <h4>Introduction to Artificial Intelligence</h4>
+                    <p><strong>Issuer:</strong> LinkedIn</p>
+                    <p><strong>Date:</strong> 02 Aug 2025</p>
+                    <a href="https://www.linkedin.com/learning/certificates/f9e6d04ff39e6d952a9914034ea484cf2ed8b4ac64f42ba7a337e66f8a0a2ded" target="_blank">View Credential</a>
+                </div>
+                <img class="cert-image" src="certs/linkedin-ai.png" alt="LinkedIn AI">
+            </div>
+        </div>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Ronel Abraham Mathew</p>
+    <p>© 2025 Ronel Abraham Mathew. All Rights Reserved.</p>
   </footer>
+
+  <!-- The Modal for Image Popup -->
+  <div id="imageModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="modalImage">
+  </div>
+
+  <script>
+    // Get the modal and its components
+    const modal = document.getElementById("imageModal");
+    const modalImg = document.getElementById("modalImage");
+    const closeBtn = document.getElementsByClassName("close")[0];
+
+    // Get all images with the class 'cert-image'
+    const images = document.getElementsByClassName("cert-image");
+
+    // Loop through all images and add the click event
+    for (let i = 0; i < images.length; i++) {
+      images[i].onclick = function() {
+        modal.style.display = "block";
+        modalImg.src = this.src; // Use the same src for the modal image
+        document.body.style.overflow = 'hidden'; // Prevent background scrolling
+      }
+    }
+
+    // Function to close the modal
+    function closeModal() {
+      modal.style.display = "none";
+      document.body.style.overflow = 'auto'; // Re-enable scrolling
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    closeBtn.onclick = closeModal;
+
+    // When the user clicks anywhere outside of the image, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        closeModal();
+      }
+    }
+  </script>
 
 </body>
 </html>
