--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     </div>
 
     <div class="cert-group">
-      <h3>OpenCV Learn Roadmap</h3>
+      <h3>OpenCV</h3>
       <div class="cert-cards">
         <div class="card">
          <div class="cert-card-content">
@@ -460,7 +460,7 @@
     </div>
 
     <div class="cert-group">
-      <h3>Kaggle Learn Roadmap</h3>
+      <h3>Kaggle</h3>
       <div class="cert-cards">
         <div class="card">
           <div class="cert-card-content">
@@ -554,3 +554,4 @@
 
 </body>
 </html>
+
