--- a/index.html
+++ b/index.html
@@ -450,12 +450,12 @@
             <div class="card">
                 <div class="cert-card-content">
                     <div class="card-info">
-                        <h4>New Certificate Title 2</h4>
-                        <p><strong>Issuer:</strong> New Issuer Name</p>
+                        <h4>CSS Essentials</h4>
+                        <p><strong>Issuer:</strong> Cisco</p>
                         <p><strong>Date:</strong> DD Mon YYYY</p>
                         <a href="#" target="_blank">View Credential</a>
                     </div>
-                    <img class="cert-image" src="certs/css_essentials.png" alt="Cisco CSS">
+                    <img class="cert-image" src="certs/css_essentials.jpg" alt="Cisco CSS">
                 </div>
             </div>
         </div>
