--- a/index.html
+++ b/index.html
@@ -453,9 +453,9 @@
                         <h4>CSS Essentials</h4>
                         <p><strong>Issuer:</strong> Cisco</p>
                         <p><strong>Date:</strong> DD Mon YYYY</p>
-                        <a href="#" target="_blank">View Credential</a>
+                        <a href="https://www.credly.com/badges/1ca5b4ef-df3b-4a88-a64f-24157249a9fe" target="_blank">View Credential</a>
                     </div>
-                    <img class="cert-image" src="certs/css_essentials.jpg" alt="Cisco CSS">
+                    <img class="cert-image" src="certs/css-essentials.jpg" alt="Cisco CSS">
                 </div>
             </div>
         </div>
@@ -572,3 +572,4 @@
 
 </body>
 </html>
+
