--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                         <p><strong>Date:</strong> 02 Sep 2025</p>
                         <a href="https://www.credly.com/badges/d88c7bc5-b074-42ec-9904-d838e729ebe4" target="_blank">View Credential</a>
                     </div>
-                    <img class="cert-image" src="certs/html_essentials.jpg" alt="Cisco HTML Essentials">
+                    <img class="cert-image" src="certs/html-essentials.jpg" alt="Cisco HTML Essentials">
                 </div>
             </div>
             <div class="card">
@@ -452,7 +452,7 @@
                     <div class="card-info">
                         <h4>CSS Essentials</h4>
                         <p><strong>Issuer:</strong> Cisco</p>
-                        <p><strong>Date:</strong> DD Mon YYYY</p>
+                        <p><strong>Date:</strong> 12 Sep 2025</p>
                         <a href="https://www.credly.com/badges/1ca5b4ef-df3b-4a88-a64f-24157249a9fe" target="_blank">View Credential</a>
                     </div>
                     <img class="cert-image" src="certs/css-essentials.jpg" alt="Cisco CSS">
@@ -572,4 +572,5 @@
 
 </body>
 </html>
+
 
